--- a/templates/fall-2015/menu.html
+++ b/templates/fall-2015/menu.html
@@ -28,6 +28,8 @@ Fall 2015
   <a href="#">Homework</a>
   <ul class="dropdown">
     {{ render('homework','linux-command-line','Linux Command Line') }}
+    {{ render('homework','make','Make') }}
+    {{ render('homework','git','Git') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "labs" %}active{% endif %}">
