--- a/templates/fall-2015/help/instructor.html
+++ b/templates/fall-2015/help/instructor.html
@@ -7,9 +7,9 @@
 # Instructor
 
 <div class="instructor">
-<h3>Daniel Zappala</h3>
-<img src="/static/img/daniel-zappala.jpg">
-<p>Associate Professor</p>
+  <h3>Daniel Zappala</h3>
+  <img src="/static/img/daniel-zappala.jpg">
+  <p>Associate Professor</p>
 </div>
 
 <div class="icons">
@@ -31,8 +31,16 @@
 ## TAs
 
 <div class="instructor">
-<h3>Chris Anderson</h3>
+  <h3>Elham Vaziripour</h3>
+  <img src="/static/img/elham-vaziripour.png"/>
 </div>
+<p>elham.vaziripour [at] gmail.com</p>
+
+<div class="instructor">
+  <h3>Chris Anderson</h3>
+  <img src="/static/img/chris-anderson.jpg"/>
+</div>
+<p>chris.anderson [at] byu.net</p>
 
 {% endfilter %}
 
