--- a/templates/fall-2015/help/officehours.html
+++ b/templates/fall-2015/help/officehours.html
@@ -17,20 +17,57 @@
 
 <div class="row">
   <div class="large-4 columns hours">
-    TBA
+    9:00 - 11:00am
   </div>
   <div class="large-4 columns hours">
-    Prof. Zappala
+    Elham
   </div>
   <div class="large-4 columns hours">
-    2228 TMCB
+    2240 TMCB
   </div>
 </div>
+
+<div class="row">
+  <div class="large-4 columns hours">
+    11:00am - 1:00pm
+  </div>
+  <div class="large-4 columns hours">
+    Chris
+  </div>
+  <div class="large-4 columns hours">
+    Cubicle 16, 1058 TMCB
+  </div>
+</div>
+
 
 <!--- Tuesday -->
 
 <div class="row office">
   <div class="large-12 columns day">Tuesday</div>
+</div>
+
+<div class="row">
+  <div class="large-4 columns hours">
+    9:00 - 11:00am
+  </div>
+  <div class="large-4 columns hours">
+    Elham
+  </div>
+  <div class="large-4 columns hours">
+    2240 TMCB
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 columns hours">
+    11:00am - 1:00pm
+  </div>
+  <div class="large-4 columns hours">
+    Chris
+  </div>
+  <div class="large-4 columns hours">
+    Cubicle 16, 1058 TMCB
+  </div>
 </div>
 
 <!-- Wednesday -->
@@ -41,13 +78,25 @@
 
 <div class="row">
   <div class="large-4 columns hours">
-    TBA
+    9:00 - 11:00am
   </div>
   <div class="large-4 columns hours">
-    Prof. Zappala
+    Elham
   </div>
   <div class="large-4 columns hours">
-    2228 TMCB
+    2240 TMCB
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 columns hours">
+    11:00am - 1:00pm
+  </div>
+  <div class="large-4 columns hours">
+    Chris
+  </div>
+  <div class="large-4 columns hours">
+    Cubicle 16, 1058 TMCB
   </div>
 </div>
 
@@ -57,10 +106,60 @@
   <div class="large-12 columns day">Thursday</div>
 </div>
 
+<div class="row">
+  <div class="large-4 columns hours">
+    9:00 - 11:00am
+  </div>
+  <div class="large-4 columns hours">
+    Elham
+  </div>
+  <div class="large-4 columns hours">
+    2240 TMCB
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 columns hours">
+    11:00am - 1:00pm
+  </div>
+  <div class="large-4 columns hours">
+    Chris
+  </div>
+  <div class="large-4 columns hours">
+    Cubicle 16, 1058 TMCB
+  </div>
+</div>
+
+
 <!-- Friday -->
 
 <div class="row office">
   <div class="large-12 columns day">Friday</div>
 </div>
+
+<div class="row">
+  <div class="large-4 columns hours">
+    8:00 - 10:00am
+  </div>
+  <div class="large-4 columns hours">
+    Elham
+  </div>
+  <div class="large-4 columns hours">
+    2240 TMCB
+  </div>
+</div>
+
+<div class="row">
+  <div class="large-4 columns hours">
+    11:00am - 1:00pm
+  </div>
+  <div class="large-4 columns hours">
+    Chris
+  </div>
+  <div class="large-4 columns hours">
+    Cubicle 16, 1058 TMCB
+  </div>
+</div>
+
 
 {% endblock %}
