--- a/templates/fall-2015/menu.html
+++ b/templates/fall-2015/menu.html
@@ -30,6 +30,7 @@ Fall 2015
     {{ render('homework','linux-command-line','Linux Command Line') }}
     {{ render('homework','make','Make') }}
     {{ render('homework','git','Git') }}
+    {{ render('homework','socket-io','Socket I/O') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "labs" %}active{% endif %}">
