Additional labs and lectures.

--- a/templates/fall-2015/labs/messaging-service-grading.html
+++ b/templates/fall-2015/labs/messaging-service-grading.html
@@ -5,9 +5,7 @@
 <div class="item">{{ text }}</div>
 <div class="score">{{ score }}</div>
 <div class="clear"></div>
-<div class="criteria">{{ criteria|safe }}</div>
-<div class="problem"></div>
-<div class="problem"></div>
+<div class="criteria">{{ criteria }}</div>
 {%- endmacro %}
 
 {% block page %}
