--- a/templates/fall-2015/menu.html
+++ b/templates/fall-2015/menu.html
@@ -32,6 +32,7 @@ Fall 2015
     {{ render('homework','git','Git') }}
     {{ render('homework','socket-io','Socket I/O') }}
     {{ render('homework','mutexes-and-condition-variables','Mutexes and Condition Variables') }}
+    {{ render('homework','semaphores','Semaphores') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "labs" %}active{% endif %}">
