Additional labs and scheduling.

--- a/templates/fall-2015/labs/threaded-messaging-service-grading.html
+++ b/templates/fall-2015/labs/threaded-messaging-service-grading.html
@@ -44,7 +44,10 @@ continuous load of 10 threads busy for 10 repetitions.") }}
 testing script to ensure that your server can handle a
 continuous load of 100 threads busy for 100 repetitions. This
 will ensure that your server is written well and avoids any
-serious errors.") }}
+serious errors. Your threads must handle only one request
+at a time to get points for this test.") }}
+
+<p></p>
 
 **TA:** *Fill in the information below when testing is
 complete and then turn the sheet in to the professor.*
