--- a/templates/fall-2015/labs/threaded-messaging-service-code-review.html
+++ b/templates/fall-2015/labs/threaded-messaging-service-code-review.html
@@ -50,7 +50,8 @@ continuous load of 10 threads busy for 10 repetitions.") }}
 testing script to ensure that your server can handle a
 continuous load of 100 threads busy for 100 repetitions. This
 will ensure that your server is written well and avoids any
-serious errors.") }}
+serious errors. Your threads must handle only one request
+at a time to get points for this test.") }}
 
 ## General Feedback
 
