--- a/templates/fall-2015/menu.html
+++ b/templates/fall-2015/menu.html
@@ -33,6 +33,8 @@ Fall 2015
     {{ render('homework','socket-io','Socket I/O') }}
     {{ render('homework','mutexes-and-condition-variables','Mutexes and Condition Variables') }}
     {{ render('homework','semaphores','Semaphores') }}
+    {{ render('homework','introduction-to-python','Introduction to Python') }}
+    {{ render('homework','python-threading','Python Threading') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "labs" %}active{% endif %}">
@@ -40,6 +42,7 @@ Fall 2015
   <ul class="dropdown">
     {{ render('labs','messaging-service','Messaging Service') }}
     {{ render('labs','threaded-messaging-service','Threaded Messaging Service') }}
+    {{ render('labs','download-accelerator','Download Accelerator') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "help" %}active{% endif %}">
