Labs and homework.

--- a/templates/fall-2015/menu.html
+++ b/templates/fall-2015/menu.html
@@ -35,6 +35,7 @@ Fall 2015
     {{ render('homework','semaphores','Semaphores') }}
     {{ render('homework','introduction-to-python','Introduction to Python') }}
     {{ render('homework','python-threading','Python Threading') }}
+    {{ render('homework','concurrency','Concurrency') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "labs" %}active{% endif %}">
@@ -43,6 +44,7 @@ Fall 2015
     {{ render('labs','messaging-service','Messaging Service') }}
     {{ render('labs','threaded-messaging-service','Threaded Messaging Service') }}
     {{ render('labs','download-accelerator','Download Accelerator') }}
+    {{ render('labs','web-server','Web Server') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "help" %}active{% endif %}">
