update office hours for Chris

--- a/templates/fall-2015/help/officehours.html
+++ b/templates/fall-2015/help/officehours.html
@@ -9,6 +9,8 @@
     schedule</a> to see when I am likely to be around for
   additional help.</p>
 
+<p>If none of the TA hours work for you, you can email Chris (chris.anderson [at] byu.net) to set up another time.</p>
+
 <!-- Monday -->
 
 <div class="row office">
@@ -29,7 +31,7 @@
 
 <div class="row">
   <div class="large-4 columns hours">
-    11:00am - 1:00pm
+    10:00am - 2:00pm
   </div>
   <div class="large-4 columns hours">
     Chris
@@ -38,7 +40,6 @@
     Cubicle 16, 1058 TMCB
   </div>
 </div>
-
 
 <!--- Tuesday -->
 
@@ -55,18 +56,6 @@
   </div>
   <div class="large-4 columns hours">
     2240 TMCB
-  </div>
-</div>
-
-<div class="row">
-  <div class="large-4 columns hours">
-    11:00am - 1:00pm
-  </div>
-  <div class="large-4 columns hours">
-    Chris
-  </div>
-  <div class="large-4 columns hours">
-    Cubicle 16, 1058 TMCB
   </div>
 </div>
 
@@ -90,7 +79,7 @@
 
 <div class="row">
   <div class="large-4 columns hours">
-    11:00am - 1:00pm
+    10:00am - 2:00pm
   </div>
   <div class="large-4 columns hours">
     Chris
@@ -118,19 +107,6 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="large-4 columns hours">
-    11:00am - 1:00pm
-  </div>
-  <div class="large-4 columns hours">
-    Chris
-  </div>
-  <div class="large-4 columns hours">
-    Cubicle 16, 1058 TMCB
-  </div>
-</div>
-
-
 <!-- Friday -->
 
 <div class="row office">
@@ -151,7 +127,7 @@
 
 <div class="row">
   <div class="large-4 columns hours">
-    11:00am - 1:00pm
+    10:00am - 2:00pm
   </div>
   <div class="large-4 columns hours">
     Chris
