--- a/templates/fall-2015/index.html
+++ b/templates/fall-2015/index.html
@@ -203,7 +203,7 @@ paraphrases) must be properly acknowledged and documented.
 
 Group work is permitted only where specified clearly in the
 assignment.  Group work is meant to be done jointly with a team of two
-to five students.  Students in a group should work on problems and
+to four students.  Students in a group should work on problems and
 programs together, and each student should perform a roughly equal
 amount of work.
 
