--- a/templates/fall-2015/menu.html
+++ b/templates/fall-2015/menu.html
@@ -36,6 +36,10 @@ Fall 2015
     {{ render('homework','introduction-to-python','Introduction to Python') }}
     {{ render('homework','python-threading','Python Threading') }}
     {{ render('homework','concurrency','Concurrency') }}
+    {{ render('homework','network-security','Network Security') }}
+    {{ render('homework','web-application-proposal','Web Application Proposal') }}
+    {{ render('homework','javascript','JavaScript') }}
+    {{ render('homework','react','React') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "labs" %}active{% endif %}">
