Added homework and labs

--- a/templates/fall-2015/menu.html
+++ b/templates/fall-2015/menu.html
@@ -40,6 +40,7 @@ Fall 2015
     {{ render('homework','web-application-proposal','Web Application Proposal') }}
     {{ render('homework','javascript','JavaScript') }}
     {{ render('homework','react','React') }}
+    {{ render('homework','webpack','webpack') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "labs" %}active{% endif %}">
@@ -49,6 +50,7 @@ Fall 2015
     {{ render('labs','threaded-messaging-service','Threaded Messaging Service') }}
     {{ render('labs','download-accelerator','Download Accelerator') }}
     {{ render('labs','web-server','Web Server') }}
+    {{ render('labs','web-application','Web Application') }}
   </ul>
 </li>
 <li class="has-dropdown {% if previous == "help" %}active{% endif %}">
