--- a/templates/fall-2015/labs/web-application.html
+++ b/templates/fall-2015/labs/web-application.html
@@ -22,7 +22,7 @@ Your application must meet these general requirements:
 
 * Support an authenticated REST interface as an API for the back end
 
-* Have a front end that follows good [web design principles](http://cs360.byu.edu/static/lectures/winter-2014/web-design.pdf).
+* Have a front end that uses React and follows good [web design principles](http://cs360.byu.edu/static/lectures/winter-2014/web-design.pdf).
 
 I encourage you to build something that benefits society in some way,
 in keeping with the mission of BYU. A good way to start is to choose
