--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@ CS 240
 
 # Course Materials
 
+* [2016 Fall]({{url_for("show",directory="fall-2016")}})
 * [2015 Fall]({{url_for("show",directory="fall-2015")}})
 * [2014 Fall]({{url_for("show",directory="fall-2014")}})
 * [2014 Winter]({{url_for("show",directory="winter-2014")}})
